allow QFile to change file name's casing on case-insensitive file systems

QTBUG-3570